# task_manager_pet_project

./: .gitignore  README.md  alembic.ini  check_models_sync.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_12_15_1758-240b00c1b43f_init_schema.py
app/: main.py
app/api/: auth.py  deps.py
app/api/routers/: users.py
app/core/: config.py  security.py
app/crud/: user.py
app/db/: session.py
app/db/models/: __init__.py  tasks.py  users.py
app/schemas/: task.py  token.py  user.py
